--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@ apply plugin: 'java'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
-
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8' 
 
 repositories {
     jcenter()
