--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'java'
+apply plugin: 'eclipse'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 compileJava.options.encoding = 'UTF-8'
-compileTestJava.options.encoding = 'UTF-8' 
+compileTestJava.options.encoding = 'UTF-8'
 
 repositories {
     jcenter()
